--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Y2K Roast Arcade</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://unpkg.com/@walletconnect/modal@2.4.2/dist/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class="crt">
@@ -12,14 +13,15 @@
     <div class="screen">
       <h1>INSERT TOKEN TO ENTER THE ARCADE</h1>
       <div class="buttons">
-        <button onclick="connectMetaMask()">Connect MetaMask</button>
-        <button onclick="connectPhantom()">Connect Phantom</button>
+        <button onclick="showConnectModal()">Connect Wallet</button>
       </div>
       <p id="status"></p>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.80.1/lib/index.iife.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3modal@2.4.2/dist/index.umd.js"></script>
   <script src="wallet.js"></script>
 </body>
 </html>
