--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="screen">
       <h1>INSERT TOKEN TO ENTER THE ARCADE</h1>
       <div class="buttons">
-        <button onclick="showConnectModal()">Connect Wallet</button>
+        <button id="connectBtn">Connect Wallet</button>
       </div>
       <p id="status"></p>
     </div>
