--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.80.1/lib/index.iife.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3modal@2.4.2/dist/index.umd.js"></script>
