--- a/index.html
+++ b/index.html
@@ -4,23 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Y2K Roast Arcade</title>
-  <style>
-    body {
-      background: black;
-      color: #00ffff;
-      font-family: monospace;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-  </style>
 </head>
 <body>
-  <h1>Static HTML is working</h1>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
