--- a/index.html
+++ b/index.html
@@ -7,10 +7,225 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <link href="https://unpkg.com/@walletconnect/modal@2.4.2/dist/style.css" rel="stylesheet" />
   <style>
-    /* Paste all your CSS here exactly as you wrote it */
-    /* ... truncated for space but assumed correct from your prior version */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+
+    html, body {
+      background-color: #000;
+      min-height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+    }
+
+    .background {
+      position: fixed;
+      inset: 0;
+      z-index: -1;
+      background: linear-gradient(45deg, #000, #1a1a1a);
+    }
+
+    .gradient-sphere {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 600px;
+      height: 600px;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(circle at center,
+        rgba(99, 102, 241, 0.15) 0%,
+        rgba(99, 102, 241, 0.1) 20%,
+        rgba(99, 102, 241, 0.05) 40%,
+        transparent 70%);
+      filter: blur(40px);
+      animation: pulse 15s ease-in-out infinite;
+      border-radius: 50%;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: translate(-50%, -50%) scale(1); }
+      50% { transform: translate(-50%, -50%) scale(1.1); }
+    }
+
+    .container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+      z-index: 1;
+    }
+
+    .glass-card {
+      background: rgba(255,255,255,0.03);
+      backdrop-filter: blur(20px);
+      border-radius: 24px;
+      padding: 32px;
+      border: 1px solid rgba(255,255,255,0.1);
+      box-shadow: 0 4px 24px rgba(0,0,0,0.2);
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .logo {
+      font-size: 28px;
+      font-weight: 600;
+      background: linear-gradient(135deg, #6366f1, #8b5cf6);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: rgba(255,255,255,0.6);
+      letter-spacing: 2px;
+    }
+
+    .verification-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 32px;
+    }
+
+    .verification-ring {
+      position: relative;
+      width: 120px;
+      height: 120px;
+      margin-bottom: 24px;
+    }
+
+    .progress-ring-circle,
+    .progress-ring-path {
+      transition: stroke-dashoffset 0.35s;
+      transform: rotate(-90deg);
+      transform-origin: 50% 50%;
+      stroke-dasharray: 326.7256;
+      stroke-dashoffset: 326.7256;
+    }
+
+    .progress-ring-circle {
+      stroke: #ffffff20;
+    }
+
+    .progress-ring-path {
+      stroke: url(#gradient);
+    }
+
+    .verification-status {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 48px;
+      height: 48px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform: translate(-50%, -50%);
+    }
+
+    .lock-icon {
+      fill: rgba(255,255,255,0.8);
+    }
+
+    .amount {
+      font-size: 32px;
+      font-weight: 600;
+      background: linear-gradient(135deg, #ffffff, #a5b4fc);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .token {
+      font-size: 14px;
+      color: rgba(255,255,255,0.6);
+      letter-spacing: 1px;
+    }
+
+    .status-container {
+      margin-bottom: 32px;
+    }
+
+    .status-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 16px;
+      padding: 12px;
+      background: rgba(255,255,255,0.03);
+      border-radius: 12px;
+      transition: all 0.3s ease;
+    }
+
+    .status-dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.2);
+      margin-right: 12px;
+    }
+
+    .status-item.active {
+      background: rgba(99, 102, 241, 0.1);
+    }
+
+    .status-item.active .status-dot {
+      background: #6366f1;
+      box-shadow: 0 0 12px rgba(99,102,241,0.5);
+    }
+
+    .status-item span {
+      font-size: 14px;
+      color: rgba(255,255,255,0.8);
+    }
+
+    .connect-button {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(135deg, #6366f1, #8b5cf6);
+      color: white;
+      font-size: 16px;
+      font-weight: 500;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.3s ease;
+    }
+
+    .connect-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(99,102,241,0.3);
+    }
+
+    .button-text {
+      margin-right: 8px;
+    }
+
+    .status-message {
+      text-align: center;
+      min-height: 20px;
+      font-size: 14px;
+      color: rgba(255,255,255,0.8);
+      margin-top: 12px;
+    }
+
+    .loading .verification-status {
+      animation: pulse 1.5s infinite;
+    }
   </style>
 </head>
+
 <body>
   <div class="background">
     <div class="gradient-sphere"></div>
@@ -26,10 +241,10 @@
       <div class="verification-container">
         <div class="verification-ring">
           <svg class="progress-ring" width="120" height="120">
-            <circle class="progress-ring-circle" stroke="#ffffff20" stroke-width="4" fill="transparent" r="52" cx="60" cy="60"/>
-            <circle class="progress-ring-path" stroke="url(#gradient)" stroke-width="4" fill="transparent" r="52" cx="60" cy="60"/>
+            <circle class="progress-ring-circle" r="52" cx="60" cy="60" fill="transparent" stroke-width="4"/>
+            <circle class="progress-ring-path" r="52" cx="60" cy="60" fill="transparent" stroke-width="4"/>
           </svg>
-          <div class="verification-status" id="verificationIcon">
+          <div class="verification-status">
             <svg class="lock-icon" viewBox="0 0 24 24" width="32" height="32">
               <path d="M12 1C8.676 1 6 3.676 6 7v2H4v14h16V9h-2V7c0-3.324-2.676-6-6-6zm0 2c2.276 0 4 1.724 4 4v2H8V7c0-2.276 1.724-4 4-4z"/>
             </svg>
@@ -42,70 +257,53 @@
       </div>
 
       <div class="status-container">
-        <div class="status-item" id="connection-status">
-          <div class="status-dot"></div>
-          <span>Ready to Connect</span>
-        </div>
-        <div class="status-item" id="verification-status">
-          <div class="status-dot"></div>
-          <span>Awaiting Verification</span>
-        </div>
-        <div class="status-item" id="token-status">
-          <div class="status-dot"></div>
-          <span>Token Check Pending</span>
-        </div>
+        <div class="status-item" id="connection-status"><div class="status-dot"></div><span>Ready to Connect</span></div>
+        <div class="status-item" id="verification-status"><div class="status-dot"></div><span>Awaiting Verification</span></div>
+        <div class="status-item" id="token-status"><div class="status-dot"></div><span>Token Check Pending</span></div>
       </div>
 
       <button id="connectBtn" class="connect-button">
         <span class="button-text">Connect Wallet</span>
         <span class="button-icon">→</span>
       </button>
-
       <div id="status" class="status-message"></div>
     </div>
   </div>
 
-  <!-- Dependencies FIRST -->
+    <!-- Required WalletConnect + Ethers -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3modal@2.4.2/dist/index.umd.js"></script>
 
-  <!-- Entry Logic -->
   <script>
     const Y2K_TOKEN = "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d";
     const Y2K_DECIMALS = 18;
     const REQUIRED_TOKENS = 4000000;
 
-    function updateStatus(message) {
-      document.getElementById("status").innerText = message;
-    }
+    const updateStatus = (msg) => {
+      document.getElementById("status").innerText = msg;
+    };
 
-    function setStatusActive(id, isActive) {
+    const setStatusActive = (id, state = true) => {
       const el = document.getElementById(id);
-      if (isActive) el.classList.add("active");
-      else el.classList.remove("active");
-    }
+      el.classList.toggle("active", state);
+    };
 
-    function updateProgress(percent) {
+    const updateProgress = (percent) => {
       const circle = document.querySelector(".progress-ring-path");
       const radius = circle.r.baseVal.value;
-      const circumference = radius * 2 * Math.PI;
-      const offset = circumference - (percent / 100 * circumference);
+      const circumference = 2 * Math.PI * radius;
+      const offset = circumference - (percent / 100) * circumference;
       circle.style.strokeDashoffset = offset;
-    }
+    };
 
-    function setLoading(state) {
-      const ring = document.querySelector(".verification-container");
-      ring.classList.toggle("loading", state);
-    }
+    const formatNumber = (n) => new Intl.NumberFormat().format(n);
 
-    function formatNumber(n) {
-      return new Intl.NumberFormat().format(n);
-    }
+    const setLoading = (loading) => {
+      document.querySelector(".verification-container").classList.toggle("loading", loading);
+    };
 
     document.addEventListener("DOMContentLoaded", () => {
-      const connectBtn = document.getElementById("connectBtn");
-
-      connectBtn.addEventListener("click", async () => {
+      document.getElementById("connectBtn").addEventListener("click", async () => {
         setLoading(true);
         updateStatus("Initializing secure connection...");
         updateProgress(0);
@@ -114,13 +312,13 @@
         try {
           const modal = new window.Web3Modal.default({
             projectId: "36c402e4989b8426f99d329788a526fc",
-            chains: ["eip155:25"],
             themeMode: "dark",
+            chains: ["eip155:25"],
             standaloneChains: ["eip155:25"],
             explorer: {
               name: "Y2K Vault",
               url: "https://y2kcoin.org",
-              description: "Y2K Sportsbook",
+              description: "The official sportsbook of the Crofam",
               recommend: true
             }
           });
@@ -151,17 +349,20 @@
 
           if (y2k >= REQUIRED_TOKENS) {
             updateProgress(100);
-            updateStatus("Access granted – Welcome to The Vault");
-            setTimeout(() => window.location.href = "vault.html", 1500);
+            updateStatus("Access granted. Welcome to The Vault...");
+            setTimeout(() => {
+              window.location.href = "vault.html";
+            }, 1500);
           } else {
-            updateStatus(`Access denied – You need ${formatNumber(REQUIRED_TOKENS)} Y2K`);
+            updateStatus(`Access denied: You need ${formatNumber(REQUIRED_TOKENS)} Y2K`);
             setStatusActive("token-status", false);
             updateProgress(66);
           }
         } catch (err) {
           console.error(err);
-          updateStatus("Wallet connection failed.");
+          updateStatus("Connection failed. Please try again.");
           setStatusActive("connection-status", false);
+          updateProgress(0);
         } finally {
           setLoading(false);
         }
