--- a/index.html
+++ b/index.html
@@ -233,16 +233,18 @@
         }
 
         .token-logo {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-            background-size: cover;
-            background-position: center;
-            opacity: 0.8;
-        }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 1;
+    opacity: 1;
+}
 
         .lock-overlay {
             position: absolute;
