--- a/index.html
+++ b/index.html
@@ -234,14 +234,15 @@
 
         .token-logo {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    transform: translate(-50%, -50%) scale(1.5);
     z-index: 1;
     opacity: 1;
 }
