--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
-    height: 100%;
+    width: 140px;
+    height: 140px;
+    transform: translate(-50%, -50%);
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    transform: translate(-50%, -50%) scale(1.5);
     z-index: 1;
     opacity: 1;
 }
