--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 
         .verification-ring {
             position: relative;
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             margin-bottom: 24px;
         }
 
@@ -236,15 +236,14 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 140px;
-    height: 140px;
+    width: 80px;
+    height: 80px;
     transform: translate(-50%, -50%);
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
-    z-index: 1;
-    opacity: 1;
+    border-radius: 50%;
+    z-index: 3;
 }
 
         .lock-overlay {
@@ -253,11 +252,11 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.3);
             display: flex;
             align-items: center;
             justify-content: center;
-            z-index: 2;
+            z-index: 4;
         }
 
         .amount-required {
