--- a/index.html
+++ b/index.html
@@ -236,14 +236,15 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 80px;
-    height: 80px;
+    width: 64px;
+    height: 64px;
     transform: translate(-50%, -50%);
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
-    border-radius: 50%;
-    z-index: 3;
+    opacity: 1;
+    z-index: 1;
 }
 
         .lock-overlay {
