--- a/index.html
+++ b/index.html
@@ -236,15 +236,16 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 64px;
-    height: 64px;
+    width: 100px;
+    height: 100px;
     transform: translate(-50%, -50%);
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     opacity: 1;
     z-index: 1;
+    border-radius: 50%;
 }
 
         .lock-overlay {
