--- a/index.html
+++ b/index.html
@@ -234,18 +234,17 @@
 
         .token-logo {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80px;
-    height: 80px;
-    transform: translate(-50%, -50%) scale(1.6); /* scaled up without cropping */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: contain;  /* full image preserved */
+    background-size: contain;        /* Shows entire logo */
     background-position: center;
     background-repeat: no-repeat;
+    border-radius: 50%;
     opacity: 1;
     z-index: 1;
-    border-radius: 50%;
 }
 
         .lock-overlay {
