--- a/index.html
+++ b/index.html
@@ -217,20 +217,20 @@
         }
 
         .verification-status {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 48px;
-            height: 48px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            color: rgba(255, 255, 255, 0.8);
-            overflow: hidden;
-        }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 120px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent; /* or remove the semi-transparent background */
+    border-radius: 50%;
+    overflow: hidden;
+    z-index: 2;
+}
 
         .token-logo {
     position: absolute;
