--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
 
         .token-logo {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    width: 90px;
+    height: 90px;
+    transform: translate(-50%, -50%);
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: contain;        /* Shows entire logo */
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
