--- a/index.html
+++ b/index.html
@@ -194,11 +194,14 @@
         }
 
         .verification-ring {
-            position: relative;
-            width: 140px;
-            height: 140px;
-            margin-bottom: 24px;
-        }
+    position: relative;
+    width: 140px;
+    height: 140px;
+    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
         .progress-ring-circle,
         .progress-ring-path {
@@ -212,33 +215,24 @@
 
         .verification-status {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 120px;
     height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: transparent; /* or remove the semi-transparent background */
-    border-radius: 50%;
-    overflow: hidden;
     z-index: 2;
 }
 
         .token-logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 90px;
-    height: 90px;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
-    opacity: 1;
     z-index: 1;
 }
 
