--- a/index.html
+++ b/index.html
@@ -188,28 +188,21 @@
 
         .verification-ring {
     position: relative;
-    width: 140px;
-    height: 140px;
+    width: 120px;
+    height: 120px;
     margin-bottom: 24px;
 }
 
-        .verification-ring {
-    position: relative;
-    width: 140px;
-    height: 140px;
-    margin-bottom: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-        .progress-ring {
+.progress-ring {
     position: absolute;
     top: 0;
     left: 0;
+    width: 120px;
+    height: 120px;
     z-index: 1;
 }
-        .progress-ring-path {
+
+.progress-ring-path {
     transform: rotate(-90deg);
     transform-origin: 50% 50%;
     stroke-dasharray: 326.7256359733385;
@@ -218,26 +211,26 @@
     stroke-linecap: round;
 }
 
-        .verification-status {
+.verification-status {
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
     width: 100px;
     height: 100px;
-    transform: translate(-50%, -50%);
+    z-index: 2;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
 }
 
-        .token-logo {
+.token-logo {
     width: 100%;
     height: 100%;
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
