--- a/index.html
+++ b/index.html
@@ -189,32 +189,18 @@
         .verification-ring {
     width: 140px;
     height: 140px;
-    margin: 0 auto 24px auto; /* Center horizontally + space below */
+    margin: 0 auto 24px auto;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block; /* fix: remove flex */
 }
 
 .progress-ring {
-    width: 140px;
-    height: 140px;
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    width: 140px;
+    height: 140px;
     z-index: 1;
-}
-
-.progress-ring-path {
-    transform: rotate(-90deg);
-    transform-origin: 50% 50%;
-    stroke-dasharray: 326.7256359733385;
-    stroke-dashoffset: 326.7256359733385;
-    transition: stroke-dashoffset 0.6s ease-in-out, stroke 0.3s ease;
-    stroke-linecap: round;
 }
 
 .verification-status {
@@ -222,14 +208,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
-    z-index: 2;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .token-logo {
