--- a/index.html
+++ b/index.html
@@ -207,20 +207,21 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     width: 120px;
     height: 120px;
-    border-radius: 50%;
-    overflow: hidden;
+    transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50%;
+    overflow: hidden;
     z-index: 2;
+    pointer-events: none;
 }
 
 .token-logo {
-    width: 100%;
-    height: 100%;
+    width: 110px;
+    height: 110px;
     background-image: url('https://raw.githubusercontent.com/LandoCrissian/y2k-roast-arcade/refs/heads/main/IMG_5445.jpeg');
     background-size: cover;
     background-position: center;
