--- a/index.html
+++ b/index.html
@@ -196,10 +196,9 @@
 
 .progress-ring {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 140px;
-    height: 140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
 }
 
