--- a/index.html
+++ b/index.html
@@ -206,16 +206,15 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 120px;
-    height: 120px;
+    width: 100px;  /* smaller than ring */
+    height: 100px;
     transform: translate(-50%, -50%);
+    border-radius: 50%;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    overflow: hidden;
-    z-index: 2;
-    pointer-events: none;
+    z-index: 2;  /* above ring, below lock */
 }
 
 .token-logo {
@@ -229,17 +228,17 @@
 }
 
         .lock-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.3);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 4;
-        }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;  /* sits above everything inside logo circle */
+}
 
         .amount-required {
             text-align: center;
